# ToolParametriser

./: .gitignore  README.md  classes.dot  config-tmpcontainer.toml  pyproject.toml  testsuite-profiles-ilcl-tmpcontainer.csv
Notebooks/: Benchmarking-Framework-v1.ipynb  Benchmarking-Framework-v2.ipynb  Benchmarking-Framework-v3.ipynb  Genbenchmarking-profiles.csv  MQbenchmarking-profiles.csv  slurm-9242446.out  slurm-9242484.out  test_nb.ipynb
ToolParametriser/: benchmark.py  bmjob.py  run.py  test_nb.ipynb  testcreator.py  testresults.py  utils.py
examples/: BWA-profile2.csv  DiaNNbenchmarking-profiles copy.csv  DiaNNbenchmarking-profiles.csv  IGenricbenchmarking-profiles.csv  MQbenchmarking-profiles.csv  ONTGuppy-profile-fullscan.csv  ONTGuppy-profile.csv  benchmarking-profiles.csv  config.toml  configBWA.toml  configBWA2.toml  configDiaNN_lib.toml  configDiaNN_libfree.toml  configInlineGeneric.toml  configInlineGeneric_bwa.toml  configMQ.toml  configONTGuppy-fullscan.toml  configONTGuppy.toml  configbwa.toml
toolparameteriser/: run.py  testcreator.py  testresults.py  utils.py
